     at least for devices currently in the field. A toggle was added to set
     the old behavior (if some devices do need it), while a fix is applied
     by default: `powercom_sdcmd_byte_order_fallback`. [PR #2480]
   * `cps-hid` subdriver now supports more variables, as available on e.g.
     CP1350EPFCLCD model. [PR #2540]

 - bicker_ser: added new driver for Bicker 12/24Vdc UPS via RS-232 serial
   communication protocol, which supports any UPS shipped with the PSZ-1053
   extension module. [PR #2448]

 - USB drivers could log `(nut_)libusb_get_string: Success` due to either
   reading an empty string or getting a success code `0` from libusb.
   This difference should now be better logged, and not into syslog. [#2399]

 - USB drivers can benefit from a new `nut_usb_get_string()` method which
   can do a fallback `en_US` query for devices which report a broken "langid"
   language identifier value. This notably manifested in inability to query
   device Manufacturer, Model and Serial Number values with some buggy device
   firmware or hardware. [PR #2604, issues #1925, #414]
   * Currently this was tested to fix certain device discovery with `usbhid-ups`;
     should also apply out of the box to same discovery logic in `blazer_usb`,
     `nutdrv_qx`, `riello_usb` and `tripplite_usb` drivers.
   * More work may be needed for other USB-capable drivers (`richcomm_usb`,
     `nutdrv_atcl_usb`) and for general code to collect string readings and
     other data points, and for `nut-scanner`.

 - Introduced a new driver concept for interaction with OS-reported hardware
   monitoring readings. Currently instantiated as `hwmon_ina219` specifically
   made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"
   subsystem of its "sysfs" interface (and talking I2C under the hood), this
   approach seems to have good potential to expand into covering more devices
   and perhaps platforms. [#2430]

 - upsmon: