@@ -186,6 +186,20 @@ static int nut_libusb_set_altinterface(usb_dev_handle *udev)
 	return ret;
 }
 
+static void nut_usb_subdriver_defaults(usb_communication_subdriver_t *subdriver)
+{
+	if (!getval("usb_config_index"))
+		subdriver->usb_config_index = LIBUSB_DEFAULT_CONF_INDEX;
+	if (!getval("usb_hid_rep_index"))
+		subdriver->hid_rep_index = LIBUSB_DEFAULT_INTERFACE;
+	if (!getval("usb_hid_desc_index"))
+		subdriver->hid_desc_index = LIBUSB_DEFAULT_DESC_INDEX;
+	if (!getval("usb_hid_ep_in"))
+		subdriver->hid_ep_in = LIBUSB_DEFAULT_HID_EP_IN;
+	if (!getval("usb_hid_ep_out"))
+		subdriver->hid_ep_out = LIBUSB_DEFAULT_HID_EP_OUT;
+}
+
 #define usb_control_msg         typesafe_control_msg
 
 /* On success, fill in the curDevice structure and return the report
@@ -711,6 +725,8 @@ static int nut_libusb_open(usb_dev_handle **udevp,
 			/* if (if_claimed)
 				usb_release_interface(udev, 0); */
 			usb_close(udev);
+			/* reset any parameters modified by unmatched drivers back to defaults */
+			nut_usb_subdriver_defaults(&usb_subdriver);
 		}
 	}
 
